--- a/JWT_CORE/appsettings.json
+++ b/JWT_CORE/appsettings.json
@@ -7,5 +7,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "APIConnection": "Server=192.168.5.12,1444;Database=TEST_LOYALTY;User ID=sa;Password=lServer;MultipleActiveResultSets=True;"
+  }
 }
